<resources>
    <string name="app_name">hw02</string>
    <string name="tview_result">0</string>
    <string name="_clear">C</string>
    <string name="_devide">/</string>
    <string name="_multiply">*</string>
    <string name="_minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_enter">=</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="todo">TODO</string>
    <string name="settings_tv_title_text">Темы:</string>
    <string name="settings_rb_default_caption">По умолчанию</string>
    <string name="settings_rb_red_caption">Красная</string>
    <string name="settings_rb_green_caption">Зеленая</string>
    <string name="settings_rb_blue_caption">Синяя</string>
    <string name="settings_btn_apply_caption">Применить</string>
</resources>