<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView_themes"
        android:layout_width="@dimen/iv_theme_width"
        android:layout_height="@dimen/iv_theme_height"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/themes"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_result"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/btn_margin"
            android:gravity="end"
            android:padding="@dimen/main_padding"
            android:text="@string/tview_result"
            android:textColor="@color/white"
            android:textSize="@dimen/tview_text_size"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_margin="@dimen/btn_margin"

            android:text="@string/_clear"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_devide"
            android:layout_margin="@dimen/btn_margin"

            android:text="@string/_devide"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multy"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_multiply"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_minus"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_1"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_2"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_3"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_plus"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_4"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_5"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_6"
            android:textSize="@dimen/btn_text_size" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_7"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_8"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_9"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_enter"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_enter"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_0"
            android:textSize="@dimen/btn_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/_dot"
            android:textSize="@dimen/btn_text_size" />

    </GridLayout>

</FrameLayout>