<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/settings_margin"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_tv_title_text"
            android:textAlignment="center"
            android:textSize="@dimen/settings_tv_title_textsize" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_margin"

            >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_rb_default_caption" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_rb_red_caption" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_rb_green_caption" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_rb_blue_caption" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_apply_caption" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>